# Cmake-QtQml-sandbox

./: .gitignore
Section 03/QCoreApplicationPj/: CMakeLists.txt
Section 03/QCoreApplicationPj/src/: main.cpp
Section 03/QGuiApplicaitonPj/: CMakeLists.txt
Section 03/QGuiApplicaitonPj/src/: main.cpp
Section 03/QGuiApplicaitonPj/ui/: main.qml
Section 04/12-ColumnApp/: CMakeLists.txt
Section 04/12-ColumnApp/src/: main.cpp
Section 04/12-ColumnApp/ui/: main.qml  main.qml~
Section 04/13-Rectangle/: CMakeLists.txt
Section 04/13-Rectangle/src/: main.cpp
Section 04/13-Rectangle/ui/: main.qml
Section 04/14-Imgs/: CMakeLists.txt
Section 04/14-Imgs/src/: main.cpp
Section 04/14-Imgs/ui/: main.qml
